Bug 556288: Use linear filters so framebuffers can use the same texture on all hardware. Assert succes. r=joedrew